Remove boilerplate, rename to zalgo-promise

--- a/demo/index.htm
+++ b/demo/index.htm
@@ -1,12 +1,12 @@
 <head>
-	<title>MyLibrary Demo</title>
+	<title>zalgo-promise Demo</title>
 </head>
 
 <body>
-  <script src="../dist/mylibrary.js"></script>
+  <script src="../dist/zalgo-promise.js"></script>
 
 	<script>
-      mylibrary.createButton(document.body, 'Click Me', function(event) {
+      zalgo-promise.createButton(document.body, 'Click Me', function(event) {
 				window.alert('Button was clicked!');
 			});
 	</script>
