chore: use prettier

--- a/demo/index.htm
+++ b/demo/index.htm
@@ -1,13 +1,13 @@
 <head>
-	<title>ZalgoPromise demo</title>
+  <title>ZalgoPromise demo</title>
 </head>
 
 <body>
   <script src="../dist/zalgo-promise.js"></script>
 
-	<script>
-        ZalgoPromise.resolve('hello world!').then(function(message) {
-			console.log(message);
-		});
-	</script>
+  <script>
+    ZalgoPromise.resolve("hello world!").then(function (message) {
+      console.log(message);
+    });
+  </script>
 </body>
